Add AdventureWorks.Reporting.API project with initial setup and EmployeeService implementation

--- a/AdventureWorks.DomainServices/AdventureWorks.DomainServices.csproj
+++ b/AdventureWorks.DomainServices/AdventureWorks.DomainServices.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AdventureWorks.Data.OLTP\AdventureWorks.Data.OLTP.csproj" />
+  </ItemGroup>
+
 </Project>
