--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,7 @@ FodyWeavers.xsd
 *.msix
 *.msm
 *.msp
+.idea/.idea.AdventureWorks/.idea/.gitignore
+.idea/.idea.AdventureWorks/.idea/dataSources.xml
+.idea/.idea.AdventureWorks/.idea/indexLayout.xml
+.idea/.idea.AdventureWorks/.idea/vcs.xml
