--- a/src/EDIGateway.API/appsettings.Development.json
+++ b/src/EDIGateway.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "EdiMonitorApi": {
+    "BaseUrl": "https://localhost:7236"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
